gke/bonusDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bonus
  labels:
    app: bonus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bonus
  template:
    metadata:
      labels:
        app: bonus
    spec:
      containers:
        - name: bonus
          image: domanovkon/bonus:latest
          ports:
            - containerPort: 8082
