gke/flightDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight
  labels:
    app: flight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight
  template:
    metadata:
      labels:
        app: flight
    spec:
      containers:
        - name: flight
          image: domanovkon/flight:1
          ports:
            - containerPort: 8081
