gke/ticketDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket
  labels:
    app: ticket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket
  template:
    metadata:
      labels:
        app: ticket
    spec:
      containers:
        - name: ticket
          image: domanovkon/ticket:latest
          ports:
            - containerPort: 8083
