gke/bonusService.yaml
apiVersion: v1
kind: Service
metadata:
  name: bonus
spec:
  selector:
    app: bonus
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
