gke/flightService.yaml
apiVersion: v1
kind: Service
metadata:
  name: flight
spec:
  selector:
    app: flight
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
