gke/gatewayService.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatewaycloud
spec:
  selector:
    app: gatewaycloud
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
