gke/ticketService.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket
spec:
  selector:
    app: ticket
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
